--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "3"
+actix-cors = "0.5.4"
 tokio = { version = "0.2", features = ["time", "process", "fs", "time"] }
 log = "0.4.0"
 env_logger = "0.8.4"
